--- a/main.css
+++ b/main.css
@@ -8,11 +8,24 @@ body{
 	border: 1px solid black;
 }
 
-.container{
-	display: block;
+.container {
+	background-color: rgba(238, 238, 238, 0.44);
+	border: 1px solid rgb(136, 136, 136);
+	box-shadow: 0 0 35px rgba(0, 0, 0, 0.6);
+	width: 25%;
+	margin: auto;
+	padding: 4px 0;
 }
 
-.container *{
-	margin: auto;
+.container > *{
+	margin: 18px auto;
 	text-align: center;
+}
+
+.inputFields p {
+	display: inline;
+}
+
+.inputFields {
+	position: relative;
 }
